--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^11.0.1",
     "react-popover": "^0.5.10",
-    "react-styled-flexboxgrid": "^3.2.1",
     "recharts": ">=1.8.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
     "sass": "^1.69.5",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
